--- a/docs/_org/index.org
+++ b/docs/_org/index.org
@@ -1,5 +1,5 @@
 # -*- fill-column: 74 -*-
-#+SETUPFILE: comfy_inline.theme
+#+SETUPFILE: floating_toc.theme
 #+OPTIONS: toc:t
 #+TITLE: Harpwise
 
@@ -65,6 +65,11 @@
 * Getting started
 
   A harmonica tool for the command line, using microphone and speaker.
+
+Harpwise supports your harmonica practice with scales, chords and licks.
+It offers various tools, an explorable quiz and may guide your jamming.
+It can be used with diatonic (richter) or chromatic harmonicas in
+different keys.
 
 When invoking harpwise, the first argument on the command line
 specifies the mode of operation; it can be one of:
