--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -19,6 +19,12 @@
 
 .SH "DESCRIPTION"
 
+.B harpwise
+supports your harmonica practice with scales, chords and licks.
+It offers various tools, an explorable quiz and may guide your jamming.
+It can be used with diatonic (richter) or chromatic harmonicas in
+different keys.
+
 When invoking harpwise, the first argument on the commandline
 specifies the mode of operation; it can be one of:
 .IP - 2
