--- a/docs/_org/usage_print.org
+++ b/docs/_org/usage_print.org
@@ -26,45 +26,60 @@ Overview of 'harpwise print':
   additional arguments):
 
     - licks-details:
-  [2m    all licks currently selected (e.g. by option -t) with all details[0m
+      all licks currently selected (e.g. by option -t) with all details
+
     - licks-list:
-  [2m    short list of selected licks (e.g. by option -t) with hole count only[0m
+      short list of selected licks (e.g. by option -t) with hole count only
+
     - licks-list-all:
-  [2m    short list of all licks (disregarding e.g option -t); hole count only[0m
+      short list of all licks (disregarding e.g option -t); hole count only
+
     - licks-with-tags:
-  [2m    list licks (each with its tags) according to the various tag-options[0m
+      list licks (each with its tags) according to the various tag-options
+
     - licks-tags-stats:
-  [2m    statistics for all known licks and their tags[0m
+      statistics for all known licks and their tags
+
     - licks-history:
-  [2m    show, which licks you played recently in mode licks; the shortcuts[0m
-  [2m    ('l', '2l', ...) from the output can be used as arguments to[0m
-  [2m    option --start-with[0m
+      show, which licks you played recently in mode licks; the shortcuts
+      ('l', '2l', ...) from the output can be used as arguments to
+      option --start-with
+
     - licks-starred:
-  [2m    show all starred licks[0m
+      show all starred licks
+
     - lick-progressions, lick-progs:
-  [2m    print all known lick progressions. These can be narrowed by giving[0m
-  [2m    option -t (this is the only case, where this option applies to[0m
-  [2m    lick progressions instead of licks). Please note, that to print a[0m
-  [2m    single lick-progression, you may just give its name on the[0m
-  [2m    commandline without any extra-keyword[0m
+      print all known lick progressions. These can be narrowed by giving
+      option -t (this is the only case, where this option applies to
+      lick progressions instead of licks). Please note, that to print a
+      single lick-progression, you may just give its name on the
+      commandline without any extra-keyword
+
     - licks-dump:
-  [2m    dump all selected licks in json-format[0m
+      dump all selected licks in json-format
+
     - holes-history:
-  [2m    show, which holes you played recently, from any mode[0m
+      show, which holes you played recently, from any mode
+
     - scales:
-  [2m    For all scales or the scales given as arguments: print them with[0m
-  [2m    their details; with --brief only liste their names[0m
+      For all scales or the scales given as arguments: print them with
+      their details; with --brief only liste their names
+
     - scale-progs, scale-progressions:
-  [2m    print all known scale progressions[0m
+      print all known scale progressions
+
     - intervals:
-  [2m    print all known intervals[0m
+      print all known intervals
+
     - player, players:
-  [2m    print details about players matching argument or a list of all[0m
-  [2m    known players[0m
+      print details about players matching argument or a list of all
+      known players
+
     - jams:
-  [2m    List available jamming-files. This is much like "harpwise jam ls",[0m
-  [2m    which however has a more relaxed way of specifying the jam.[0m
-  [2m    See there for details.[0m
+      List available jamming-files. This is much like "harpwise jam ls",
+      which however has a more relaxed way of specifying the jam.
+      See there for details.
+
 
   
 Usage by Examples:
